--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-.App {
-  text-align: center;
+* {
+  background-color: black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App {
+  text-align: center;
+  /* display: flex; */
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -25,11 +25,33 @@
 }
 .box {
   width: 100px;
-  height: 100px;
-  background-color: green;
-  font-size: 36px;
-  padding: 100px;
-  margin-left: 600px;
+  height: 80px;
+  background-color: darkslategrey;
+  font-size: 72px;
+  font-weight: 800;
+  padding: 20px 60px 30px 60px;
+  margin-left: 507px;
+  /* align-self: center;
+  justify-content: center; */
+}
+.up {
+  background-color: blue;
+  border-radius: 5px;
+  width: 60px;
+}
+.reset {
+  background-color: white;
+  border-radius: 5px;
+  width: 60px;
+}
+.down {
+  background-color: red;
+  border-radius: 5px;
+  width: 60px;
+}
+#head {
+  background-color: black;
+  width: 100%;
 }
 
 .App-link {
