--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,8 @@
 .box {
   width: 100px;
   height: 80px;
-  background-color: darkslategrey;
+  color: darkslategray;
+  background-color: black;
   font-size: 72px;
   font-weight: 800;
   padding: 20px 60px 30px 60px;
