--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,12 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+#buttonp {
+  display: inline-block;
+  text-align: center;
+}
 .App-header {
   background-color: #282c34;
-  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,9 +33,8 @@
   font-size: 72px;
   font-weight: 800;
   padding: 20px 60px 30px 60px;
-  margin-left: 507px;
-  /* align-self: center;
-  justify-content: center; */
+  /* display: inline-block; */
+  text-align: center;
 }
 .up {
   background-color: blue;
